--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run Python Script
 
 on:
   workflow_dispatch:
-
+  
   push:
     branches:
       - main
@@ -10,10 +10,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+      
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -22,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install serpapi
-
+          pip install pandas openpyxl serpapi
+          
       - name: Run script with API key
         env:
           SERPAPI_API_KEY: ${{ secrets.SERPAPI_API_KEY }}
