--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,8 +22,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pandas openpyxl serpapi
+          python3 -m pip3 install --upgrade pip
+          pip3 install pandas openpyxl serpapi
           
       - name: Run script with API key
         env:
