--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip3 install pandas openpyxl serpapi
+          pip install pandas openpyxl serpapi
           
       - name: Run script with API key
         env:
